# opengl-course-lab2

./: CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: controls.cpp  controls.hpp  main.cpp  object.cpp  object.hpp  shader.hpp  texture.cpp
